--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -26,6 +26,9 @@
   }
 
   &__link {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     transition: box-shadow
       map-get($transition-parameters, 'transition-duration')
       map-get($transition-parameters, 'cubic-bezier');
@@ -81,6 +84,7 @@
   }
 
   &__details {
+    flex-grow: 1;
     padding: 20px 24px;
     border: 1px solid map-get($colors, 'border-color');
     border-top: none;
